frontend/assets/stylesheets/pages/_tier.scss
$current-indicator: rem(47px);

.secondary-content {
    flex-basis: 16em;
    order: 2;
    @if $old-ie {
        float: left;
    }
}

.right-align {
    float: right;
}

.package-container {
    background-color: #f2f2f2;
    border-top: 1px solid transparent;
    border-bottom: 1px solid transparent;
    padding: rem($gs-gutter);
}

.package-container__header {
    @include rem((
        padding-bottom: $gs-gutter,
    ));
    @include mq(tablet) {
        @include rem((
            margin-bottom: 40px
        ));
    }
    border-bottom: 1px dotted #333333;
}

// .package-list is a flexbox
// so each .package inside is equal width
.package-list {
    @include mq(desktop) {
        @include flexbox;
        @include align-items(stretch);
        margin: 0 auto;
        border-spacing: rem($gs-gutter);
        padding-top: $current-indicator;
    }
}

.package-list--bordered .package {
    border: 1px solid $c-neutral5;
}

.package {
    background-color: $c-neutral7;
    position: relative;

    // .package is a flexbox too to
    // align CTA buttons to bottom
    // regardless of package length(!)
    @include flexbox;
    @include justify-content(space-between);
    @include flex-direction(column);

    @include rem((
        margin-right: $gs-gutter
    ));

    &:last-child {
        margin-right: 0;
    }

    @include mq(desktop) {
        @include flex-grow(1);
        @include flex-basis(0); // this fixes a bug, dunno why
        width: 31%;
        float: left;

        .patron-page & {
            width: 45%;
        }
    }

    @include mq($until: desktop) {
        margin-right: 0;
        display: block;
        overflow: hidden;
        @include rem((
            margin-bottom: $gs-gutter
        ));
    }

    // override button widths for flexbox
    .action {
        width: auto;
        min-width: 100%;
    }
}

.package__item-cta {
    padding: $gs-gutter;
    // this is annoying but removes an ~8px height gap
    // between buttons in columns. if you can fix it, bravo!
    @include rem((
        height: 100px
    ));
    @include mq($from: tablet, $until: desktop) {
        width: 55%;
        float: right;
        padding-left: 0;
    }
}

.package__item--promo {
    // see above – we show 2 buttons here so need more space
    @include rem((
        height: 170px
    ));
}

.package__current-indicator {
    color: #ffffff;
    background-color: #9c9c9c;
    text-align: center;
    @include rem((
        padding: $gs-baseline,
        margin: 0 $gs-baseline/2 0
    ));
    @include mq(desktop) {
        margin-top: -$current-indicator;
    }
    @include mq($until: desktop) {
        margin: 0;
    }
    // this prevents the text splitting onto 2 lines
    @include mq($from: desktop, $until: mem-full) {
        @include rem((
            font-size: 14px
        ));
    }
}

.package__inner {
    @include rem((
        padding: $gs-gutter
    ));
    @include mq($from: tablet, $until: desktop) {
        @include rem((
            padding-top: $gs-gutter*2,
            padding-bottom: 0
        ));
    }
}

.package__inner--cancel {
    @include rem((
        height: 740px // magic number
    ));
}

// we always want buttons to appear below the main benefits copy
.package__cta {
    position: absolute;
    bottom: $gs-gutter;
    padding: $gs-gutter;
    width: 100%;
}

.package--current {
    border: 1px solid #9c9c9c;
}

.package__title-container {
    position: relative;

    @include rem((
        padding: $gs-gutter $gs-gutter $gs-gutter 65px
    ));

    .package__title {
        @include fs-headline(3);
        color: $white;
        word-wrap: break-word;
        position: relative;
    }

    &:before {
        @extend %icon-sprite;
        @extend %icon-sprite-g-white-36;
        content: '';
        display: block;
        position: absolute;
        @include rem((
            left: $gs-gutter,
            top: 15px
        ));
    }

    &--friend {
        background-color: $c-neutral1;
    }

    &--partner {
        background-color: $mem-brandLightblue;
        .package__title { color: $black; }
    }

    &--patron {
        background-color: $mem-brandDarkBlue;
    }
}

.package__list-benefits {
    margin-left: 0;
    @include mq(tablet) {
        margin-left: 45%;
    }

    @include mq(desktop) {
        margin-left: 0;
    }
}

.package__list-benefits-element {
    @include fs-bodyCopy(1);
    @include rem((
        padding-bottom: $gs-gutter
    ));
    margin-bottom: 0;
    list-style: none;
    > li {

        &:last-child {
            margin-bottom: 0;
            padding-bottom: 0;
        }

    }
}

.package__list-benefits .package__list-benefits-element:before {
    content: 'Plus:';
    display: block;
    @include fs-bodyCopy(1);
    color: $c-neutral1;
    @include rem((
        margin-bottom: $gs-baseline/2
    ));
}

// bit fugly - hides the "Plus:" text for first list item
.package__list-benefits .package__list-benefits-element:first-of-type:before {
    display: none;
}

.package__price {
    clear: both;
    overflow: hidden;

    @include mq($from: tablet) {
        @include rem((
            margin-bottom: 20px,
            height: 45px
        ));
    }

    @include mq($from: tablet, $until: desktop) {
        display: inline-block;
        width: 30%;
        margin-right: 14%;
        margin-top: 0;
        vertical-align: top;
        height: auto;
    }
}

.price-info {

    height: 100%;

    .price-info__detail {
        @include fs-headline(2);

        @include mq(desktop) {
            @include fs-headline(3);
        }
    }

    @include mq(mobile) {
        .price-info__container-inner {
            @include rem((
                margin-bottom: $gs-gutter
            ));
        }
    }

    @include mq(desktop) {
        .price-info__container-inner {
            width: 50%;
            float: left;
        }

        .price-info__container-inner--last {
            text-align: right;
            height: 100%;
            border-left: 1px solid $c-neutral5;
        }
    }

    @include mq($from: tablet, $until: desktop) {
        .price-info__container-inner--last {
            @include rem((
                margin-top: $gs-gutter,
                padding-top: $gs-gutter
            ));
            border-top: 1px solid $c-neutral5;
            border-left: 0;
        }
    }

    .price-info__sub-detail {
        @include fs-bodyCopy(1);
        color: #666666;
        display: block;
    }

}

.package__pcm {
    @include fs-headline(1);
}

.package__leadin {
    @include fs-headline(3);
    border-bottom: 1px solid $c-neutral4;
    @include rem((
        padding-bottom: $gs-gutter
    ));
    @include mq(desktop) {
        @include rem((
            height: 97px // magic number
        ));
    }
}

.package__description {
    @include fs-bodyCopy(2);

    @include mq(desktop) {
        @include fs-bodyCopy(3);
        @include rem((
            min-height: 120px
        ));
        @include rem((
            padding-top: $gs-gutter/2,
            min-height: 60px
        ));
    }

    @include mq($from: tablet, $until: desktop) {
        display: inline-block;
        width: 55%;
        vertical-align: top;
    }
}

/* Upgrade
======================================================================= */

.upgrade__payment-label {
    display: block;
    position: relative;
    border: 1px solid #cccccc;
    padding: $gs-baseline/2 $gs-baseline $gs-baseline/2 $gs-baseline*2;
    @include border-radius(5px);

    span {
        display: block;
        @include fs-textsans(4);
        margin: 0 0 $gs-baseline;
        &.payment-label__title {
            @include fs-headline(2);
        }
    }

    input[type=radio] {
        margin: 0;
        padding: 0;
        position: absolute;
        top: 10px;
        left: 6px;
    }

    input[type=radio]:checked + .payment-label__title {
        font-weight: bold;
    }

    &:hover {
        background-color: #eeeeee;
    }
}

